--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <script src="https://stenito.github.io/stlib/stjs.js"></script>
+  <script src="stjs.js"></script>
 </head>
+
 <body>
-  
+
+  <script>
+    console.log(getRandom());
+  </script>
 </body>
+
 </html>
