--- a/src/index.html
+++ b/src/index.html
@@ -5,13 +5,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <script src="stjs.js"></script>
+  <script src="https://stenito.github.io/stlib/src/stjs.js"></script>
 </head>
 
 <body>
 
   <script>
     console.log(getRandom());
+    console.log(getRandomInt(10));
+    console.log(getRandomBetween(5, 7));
+    console.log(getRandomIntBetween(5, 10));
   </script>
 </body>
 
